--- a/Kaede and the Eternal Sake Fountain/YAML/System.yaml
+++ b/Kaede and the Eternal Sake Fountain/YAML/System.yaml
@@ -11,7 +11,7 @@ elements:
 - Wind
 - Holy
 - Dark
-start_y: 6
+start_y: 18
 airship: !ruby/object:RPG::System::Vehicle
   start_y: 0
   bgm: !ruby/object:RPG::BGM {name: Airship, volume: 100, pitch: 100}
@@ -37,7 +37,7 @@ battle_end_me: !ruby/object:RPG::ME
   volume: 100
 party_members:
 - 1
-start_x: 8
+start_x: 10
 ship: !ruby/object:RPG::System::Vehicle
   start_y: 0
   bgm: !ruby/object:RPG::BGM {name: Ship, volume: 100, pitch: 100}
@@ -174,7 +174,7 @@ variables:
 - ''
 - ''
 battle_bgm: !ruby/object:RPG::BGM {name: Battle1, volume: 100, pitch: 100}
-version_id: 84191638
+version_id: 45787297
 start_map_id: 1
 battler_name: Assassin
 magic_number: 77696160
@@ -284,7 +284,7 @@ gameover_me: !ruby/object:RPG::ME
   name: Gameover1
   pitch: 100
   volume: 100
-game_title: RPGSkeleton
+game_title: Kaede and the Eternal Sake Fountain
 title_bgm: !ruby/object:RPG::BGM {name: Theme1, volume: 100, pitch: 100}
 terms: !ruby/object:RPG::System::Terms
   params:
