--- a/Kaede and the Eternal Sake Fountain/YAML/MapInfos.yaml
+++ b/Kaede and the Eternal Sake Fountain/YAML/MapInfos.yaml
@@ -6,3 +6,10 @@
   order: 1
   scroll_y: 320
   parent_id: 0
+2: !ruby/object:RPG::MapInfo
+  scroll_x: 368
+  name: MAP002
+  expanded: false
+  order: 2
+  scroll_y: 320
+  parent_id: 0
